# pointy

./: README.md  flake.nix
backend/: .envrc  .gitignore  backend.cabal  example-config.toml
backend/src/: Bus.hs  Cache.hs  Config.hs  Main.hs  NixUtils.hs  OutPaths.hs  ProcessLimiter.hs  UserRepo.hs
backend/src/Handlers/: CommitHash.hs  ProjectEntities.hs  Projects.hs  RunStep.hs  SrcFiles.hs  StatusStream.hs  Statuses.hs  StepConfig.hs  StepLastSuccess.hs  Steps.hs  Store.hs  Upload.hs
docs/: default.nix  mkdocs.yml
docs/javascripts/: theme-screenshots.js
docs/pages/: admin.md  cli-reference.md  execution.md  index.md  projects.md  steps.md  type-reference.md  user-repo-setup.md
docs/pages/screenshots/: .gitignore
docs/stylesheets/: extra.css
frontend/: elm-srcs.nix  elm.json  ffi.js  index.html  index.js  module.nix  package-lock.json  package.json  webpack.config.js
frontend/review/: elm.json
frontend/review/src/: ReviewConfig.elm
frontend/src/: Actions.elm  Channels.elm  Keyboard.elm  Main.elm  Ports.elm  Route.elm  Specs.elm  Toast.elm
frontend/src/Api/: Api.elm  ApiData.elm  Decode.elm  Encode.elm
frontend/src/Components/: Select.elm
frontend/src/Extra/: Accessors.elm  Decode.elm  Events.elm  FlowError.elm  Http.elm  List.elm
frontend/src/Lib/: StringColor.elm
frontend/src/Model/: Core.elm  Lenses.elm  Lib.elm  Shadow.elm  TableSpec.elm
frontend/src/View/: Dialog.elm  FileBrowser.elm  Icons.elm  Lib.elm  Main.elm  Project.elm  Shadow.elm  Table.elm
frontend/styles/: _mixins.scss  _tokens.scss  main.scss
frontend/styles/components/: _select.scss
modules/: dev-vm.nix  pointy-host.nix  screenshots-vm.nix  shared.nix
screenshots/: dev-config.toml  output-file-share-button.js  output-files-browser.js  output-files-html-preview.js  project-create-form.js  project-delete-button.js  project-row-actions.js  project-view.js  projects-header-controls.js  projects-home.js  run-all-screenshots.js  step-clone-button.js  step-derivation-header.js  step-derivation-stop-header.js  step-edit-form.js  step-file-upload-header.js  step-inspect-form.js  step-source-files-section.js  steps-add-existing-form.js  steps-assign-unassign.js  steps-reorder-handle.js  steps-search-box.js  steps-visibility-button.js  steps-visibility-controls.js
screenshots/lib/: helpers.js
